--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+body > * {min-width: 1920px;}
 header {
     display:flex; justify-content: space-between; align-items: center;
     padding:0 260px; height: 80px;
