--- a/styles/about.css
+++ b/styles/about.css
@@ -1,4 +1,4 @@
-body > * {min-width: 1920px;}
+body > * {min-width: 1900px; max-width: 1920px;}
 header {
     display:flex; justify-content: space-between; align-items: center;
     padding:0 260px; height: 80px;
